修正無限下拉BUG 引用showdown 文章看起來像是文章了 cbtop新增超過二十字縮略 新增回復防呆 新增文章的圖片連結與編輯文章尚待更新

--- a/css/CreatePost.css
+++ b/css/CreatePost.css
@@ -68,3 +68,16 @@ input{
         .zenbu #txtPostCotent{
             color: #fafafaea;
         }
+    textarea{
+        color: #fafafaea;
+    }
+.kobi{
+    padding: 10px;
+    margin: 5px;
+    font-family:'moubi';
+    text-shadow: 2px 2px 2px #270c0c;
+    border-bottom: 1px double #e76c25;
+    box-shadow: 2px 2px 4px #e76c25;text-align: left;
+    font-size: 22px;
+    color: #fafafaea;
+}
