--- a/Main.Master
+++ b/Main.Master
@@ -8,10 +8,9 @@
     <title></title>
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
     <form id="form1" runat="server">
@@ -113,10 +112,10 @@
                             <div class="BLmember">
                                 <asp:PlaceHolder ID="plhBlk" runat="server" Visible="false">
                                     <h3>黑名單</h3>
-                                    <br>
                                     <asp:TextBox ID="txtBlkAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
-                                    <asp:TextBox ID="txtBlkDate" runat="server" placeholder="(輸入懲處期限)"></asp:TextBox>
-                                    <asp:Button ID="btnBlk" runat="server" Text="確認" OnClick="btnBlk_Click" />
+                                    <asp:TextBox ID= "txtBlkDate" runat="server" placeholder="(輸入懲處期限)"></asp:TextBox>
+                                    <asp:Button ID="Button1" runat="server" Text="確認" OnClick="btnBlk_Click" /><br />
+                                    <p runat="server" Text="黑單列表"/><br />
                                     <asp:Repeater ID="RptrBlk" runat="server">
                                         <ItemTemplate>
                                             <asp:Literal ID="ltlBlkID" runat="server" Text='<%# Eval("Account") %>' /><br />
@@ -125,12 +124,16 @@
                                     </asp:Repeater>
                                 </asp:PlaceHolder>
                             </div>
+                            <br>
+                            <br>
                             <div class="MMlist">
                                 <asp:PlaceHolder ID="plhMM" runat="server" Visible="false">
                                     <h3>版主名單</h3>
-                                    <br>
-                                    <asp:TextBox ID="txtMMAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox>
-                                    <asp:Button ID="btnMM" runat="server" Text="確認" OnClick="btnBlk_Click" />
+                                    <asp:TextBox ID="txtMMAcc" runat="server" placeholder="(輸入懲處會員帳號)"></asp:TextBox><br />
+                                    <button type="button" class="btn btn-sm btn-outline-light text-white bg-dark" data-bs-toggle="popover" data-bs-placement="bottom" animation="true" data-bs-content="請輸入會員帳號，點擊新增使其就任板主職位；點擊解除使其卸任板主職位。 新增板主不得為管理員，亦不得為黑名單中的會員。">?</button><br />
+                                    <asp:Button ID="btnMMUpdate" runat="server" Text="加入" OnClick="btnMMUpdate_Click" /><br />
+                                    <asp:Button ID="btnMMDelete" runat="server" Text="解除" OnClick="btnMMDelete_Click" /><br />
+                                    <p runat="server" Text="板主列表"/><br />
                                     <asp:Repeater ID="RptrMM" runat="server">
                                         <ItemTemplate>
                                             <asp:Literal ID="ltlMMID" runat="server" Text='<%# Eval("MemberID") %>' />
@@ -145,8 +148,15 @@
             </div>
         </div>
     </form>
+    <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery.min.js"></script>
+    <script>
+        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+            return new bootstrap.Popover(popoverTriggerEl)
+        })
+      </script>
     <script>
         //  展開/收合按鈕
         $(document).ready(function () {
@@ -157,6 +167,10 @@
                 $(".fa-align-left").toggleClass("fa-chevron-circle-right");
             })
         });
+        $(function () {
+            $("#txtBlkDate").datepicker();
+        });
+
     </script>
     <script>
         $(document).ready(function () {
@@ -170,13 +184,12 @@
                     for (var item of jsonText) {
                         rowsText += `
                         <tr>
-                              <div>
-                                  <p name="PboardID" value="${item.PboardID}">${item.Pname}</p>
+                              <div class="${item.PboardID}">
+                                  <p name="PboardID" class="PboardID" value="${item.PboardID}">${item.Pname}</p>
                                   <p name="Pname" value="${item.Pname}" ></p>
                                   <p name="Pshow" value="${item.Pshow}" ></p>
-                                  <p name="Porder" value="${item.Porder}" ></p>
-<input type="submit" name="btnNext" value="測試" id="btnNext" class="btn btn-primary btn-sm">
-                                  <button id="btnPBMoveUp" type="button" class="btn-outline-primary btnPBMoveUp" data-bs-target="#btnPBMoveUp">上移</button>
+                                  <p name="Porder" class="Porder" value="${item.Porder}" ></p>
+                                <input type="submit" id="btnPBMoveUp" class="btn-outline-primary btn-sm btnPBMoveUp" name="btnPBMoveUp" value="上移" />
                                   <button type="button" class="btn-outline-primary PBDataList_btnPBMoveDown_0" data-bs-target="#btnPBMoveDown">下移</button>
                                   <button type="button" class="btn-outline-primary PBDataList_btnPBHide_0" data-bs-target="#btnPBHide">隱藏</button>
                               </div>
@@ -193,6 +206,7 @@
                     alert("母版塊載入失敗，請聯絡管理員。");
                 }
             });
+            /*<button id="btnPBMoveUp" type="button"  data-bs-target="#btnPBMoveUp">上移</button>*/
 
             //#ID選擇棄 .class選擇棄
             //測試用
@@ -202,15 +216,19 @@
 
             //捕捉PBDataList裡面，所有的click事件，class符合btnPBMoveUp
             //上移母版
-            $("#PBDataList").on('click',".btnPBMoveUp",function () {
+            $("#PBDataList").on('click', ".btnPBMoveUp", function () {
                 alert("按鈕事件，尚未載入API");
+                var parentDiv = $(this).closest("div");
+                var id = parentDiv.find("p.PboardID");
+                var order = parentDiv.find("p.PboardID");
+                var postData = { "PboardID": id.val(), "Porder": order.val() };
 
-                var container = $("#btnPBMoveUp");
-                var postData = {
-                    "PboardID": $("p[name*=PboardID]", container).val(),
-                    //"Pname": $("input[name=txtName]", container).val(),
-                    "Porder": $("p[name=Porder]", container).val(),
-                };
+                //var container = $("#btnPBMoveUp");
+                //var postData = {
+                //    "PboardID": $("p[name*=PboardID]", container).val(),
+                //    //"Pname": $("input[name=txtName]", container).val(),
+                //    "Porder": $("p[name*=Porder]", container).val(),
+
                 $.ajax({
                     url: "/API/PBoardInMain.ashx?Action=MoveUp",
                     method: "POST",
@@ -231,7 +249,6 @@
                     }
                 });
             });
-
 
 
         });
