--- a/css/CreatePost.css
+++ b/css/CreatePost.css
@@ -33,11 +33,14 @@ a:active {
     text-shadow: 2px 2px 2px #270c0c;
     border-bottom: 1px double #e76c25;
     box-shadow: 2px 2px 4px #e76c25;text-align: left;
-    font-size: 22px;
+    font-size: 18px;
     color: #fafafaea;
 }
         .zenbu td{
-            width: 50%;
+            width: 70%;
+        }
+        .zenbu th{
+         font-size: 25px;
         }
         .zenbu td input{
             width: 80%;
@@ -46,21 +49,21 @@ a:active {
             width: 40%;
         }
 input{
-    color: #fafafaea;
-    font-family:'moubi';
-    font-size: 22px;
-    text-shadow: 2px 2px 2px #270c0c;
-    cursor:pointer;
-    border-radius:10px;
-    width: 20%;
+
 }
         .zenbu select{
           color: #fafafaea;
           border-radius:10px;
         }
         .zenbu input{
-            width: 40%;
+            width: 20%;
             color: #fafafaea;
+            color: antiquewhite; border:0;
+            background-color:#181717;
+            border: 1px ridge #e76c25;
+            box-shadow: 2px 1px 4px #e76c25;text-align: center;
+            border-radius:10px;
+            cursor:pointer;
         }
         .zenbu .T{
             width: 80%;
@@ -77,7 +80,34 @@ input{
     font-family:'moubi';
     text-shadow: 2px 2px 2px #270c0c;
     border-bottom: 1px double #e76c25;
-    box-shadow: 2px 2px 4px #e76c25;text-align: left;
+    box-shadow: 2px 2px 4px #e76c25;
     font-size: 22px;
     color: #fafafaea;   
+}
+.kobi input{
+    color: antiquewhite; border:0;
+    background-color:#181717;
+    border: 1px ridge #e76c25;
+    box-shadow: 2px 1px 4px #e76c25;text-align: center;
+    border-radius:10px;
+    cursor:pointer;
+}
+.kobi th{
+    width: 100%;
+}
+.kobi td{
+    width: 150%;
+    text-align: left;
+}
+.cbtn{
+    font-family:'moubi';
+    text-shadow: 2px 2px 2px #270c0c;
+            border: 1px ridge #e76c25;
+    box-shadow: 2px 2px 4px #e76c25;text-align: center;
+    font-size: 22px;
+    color: #fafafaea;
+    border-radius:10px;
+    width: 20%;
+
+    margin-left: 85px;
 }
