--- a/Main.Master
+++ b/Main.Master
@@ -282,7 +282,7 @@
                     }
                     $("#PBDataList").append("<table>" + rowsText + "</table>");
                     console.log(jsonText);
-                    alert("成功載入母版塊");
+                    //alert("成功載入母版塊");
                 },
                 error: function (msg) {
                     console.log(msg);
