--- a/css/Display.css
+++ b/css/Display.css
@@ -42,8 +42,11 @@ div{
             margin: 20px;
             margin-top: 0px;
         }
+        .btnl{
+            margin-top: 10px;
+        }
         .MainPost .PostT{
-            font-size: 60px;
+            font-size: 40px;
             float: left;
             width: 90%;
             line-height: 66px;
@@ -54,7 +57,6 @@ div{
             width: 10%;
             line-height: 66px;
             text-align: center;
-
         }
         .MainPost .Postbtn{
             margin-left: 130px;
@@ -81,11 +83,11 @@ div{
         .MainPost .PostM{
             font-size: 17px;
             width: 42%;
-            line-height: 30px;
+            line-height: 35px;
         }
         .MainPost .PostC{
             font-size: 22px;
-            width: 100%;
+            width: 90%;
             margin-top: 30px;
             float: left;
             margin-bottom: 10px;
