--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,10 @@
 * {
     background-color: #181717;
-    /*background-color: blue;*/
+    background-color: blue;
 }
 
 div {
-     /*border: 1px solid rgb(255, 255, 255);*/ 
+     border: 1px solid rgb(255, 255, 255); 
 }
 
 .container-all {
@@ -168,6 +168,14 @@ ul ul li a {
     }
 
 /*--------------------------------*/
+#btnRegister {
+    background-color: white;
+    font-size:22px;
+    width:75px;
+    height:50px;
+}
+
+
 #btnwebLogin {
     background-color: white;
 }
