--- a/Main.Master
+++ b/Main.Master
@@ -55,6 +55,8 @@
             <asp:TextBox ID="txtPassword" runat="server" TextMode="Password"></asp:TextBox><br />
             <br />
             <asp:Button ID="btnLogin" runat="server" Text="登入" OnClick="btnLogin_Click" />
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <asp:Button ID="btnRegister" runat="server" Text="註冊" OnClick="btnRegister_Click" />
             <br />
             <span class="span1">測試版登入?</span>
             <asp:CheckBox runat="server" ID="ckbskip" Checked="true" Visible="false" /><br />
@@ -141,8 +143,6 @@
                         <div class="d-none d-sm-block col-sm-4 col-md-4 col-lg-4  text-center ">
                             使用者狀態區
 
-
-                            
                             <div class="MemberStatus">
                                 <asp:Button ID="btnwebLogin" runat="server" Text="登入" OnClick="btnwebLogin_Click" />
                                 <asp:PlaceHolder ID="plgMemberStatus" runat="server">
@@ -152,8 +152,11 @@
                                         <asp:Label ID="lblMember_NickName" runat="server" Text="Label"></asp:Label>
                                         <br />
                                         <asp:Label ID="lblMember_Account" runat="server" Text="Label"></asp:Label>
+                                        &nbsp&nbsp&nbsp
+                                        <asp:Button ID="lblMember_Change" runat="server" Text="資料變更" OnClick="lblMember_Change_Click" />
                                         <br />
                                         <asp:Label ID="lblMember_MemberStatus" runat="server" Text="Label"></asp:Label>
+                                        
                                     </div>
 
                                     <div class="memberstatusright">
