--- a/Main.Master
+++ b/Main.Master
@@ -55,6 +55,8 @@
             <asp:TextBox ID="txtPassword" runat="server" TextMode="Password"></asp:TextBox><br />
             <br />
             <asp:Button ID="btnLogin" runat="server" Text="登入" OnClick="btnLogin_Click" />
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <asp:Button ID="btnRegister" runat="server" Text="註冊" OnClick="btnRegister_Click" />
             <br />
             <span class="span1">測試版登入?</span>
             <asp:CheckBox runat="server" ID="ckbskip" Checked="true" Visible="false" /><br />
@@ -65,9 +67,10 @@
 
 
         </asp:PlaceHolder>
-
+        
 
         <asp:PlaceHolder ID="plhLogined" runat="server" Visible="true">
+            <asp:PlaceHolder ID="PlaceHolder1" runat="server" Visible="true">
             <div class="container-all">
                 <!--xs以下顯示，md以上不顯示 -->
                 <div class="d-xs-block d-md-none">
@@ -153,8 +156,11 @@
                                         <asp:Label ID="lblMember_NickName" runat="server" Text="Label"></asp:Label>
                                         <br />
                                         <asp:Label ID="lblMember_Account" runat="server" Text="Label"></asp:Label>
+                                        &nbsp&nbsp&nbsp
+                                        <asp:Button ID="lblMember_Change" runat="server" Text="資料變更" OnClick="lblMember_Change_Click" />
                                         <br />
                                         <asp:Label ID="lblMember_MemberStatus" runat="server" Text="Label"></asp:Label>
+                                        
                                     </div>
 
                                     <div class="memberstatusright">
@@ -165,7 +171,7 @@
                                         <asp:Button ID="btnwebLogout" runat="server" Text="登出" OnClick="btnLogout_Click" />
 
                                     </div>
-                                </asp:PlaceHolder>
+                            </asp:PlaceHolder>
 
                             </div>
                 </div>
@@ -230,16 +236,18 @@
                 </div>
             </div>
         </div>
+        </asp:PlaceHolder>
+
     </form>
-    <script src="js/popper.min.js"></script>
+        <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.js"></script>
     <script src="js/jquery.min.js"></script>
-    <script>
-        var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
-        var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
-            return new bootstrap.Popover(popoverTriggerEl)
-        })
-    </script>
+        <script>
+            var popoverTriggerList = [].slice.call(document.querySelectorAll('[data-bs-toggle="popover"]'))
+            var popoverList = popoverTriggerList.map(function (popoverTriggerEl) {
+                return new bootstrap.Popover(popoverTriggerEl)
+            })
+        </script>
     <script>
         //  展開/收合按鈕
         $(document).ready(function () {
